# BinaryHitters-WatchOut-DL

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  test_async_upload.py  test_opencv_thread.py  test_threading.py
src/: __init__.py
src/api/: __init__.py  client.py
src/camera/: __init__.py  live_detector.py
src/config/: __init__.py  settings.py
src/detectors/: __init__.py  fall_detector.py
src/events/: __init__.py  manager.py
src/utils/: __init__.py  constants.py  experiment_logger.py  visualization.py
src/video/: __init__.py  encoder.py  ring_buffer.py
